# traversability_layer

./: CMakeLists.txt  costmap_plugins.xml  package.xml
include/traversability_layer/: traversability_layer.hpp
scripts/: laserscan_spoofer.py
src/: traversability_layer.cpp
